【微信Tweak】修改微信运动步数

--- a/hzwechatchangesport/Makefile
+++ b/hzwechatchangesport/Makefile
@@ -1,13 +1,12 @@
-THEOS_DEVICE_IP = 192.168.1.107
+THEOS_DEVICE_IP = 192.168.1.101
 ARCHS = armv7 arm64
 TARGET = iphone:latest:8.0
 
 include $(THEOS)/makefiles/common.mk
 
-TWEAK_NAME = HZWeChatNoRevokeMsg
-HZWeChatNoRevokeMsg_FILES = Tweak.xm
-HZWeChatNoRevokeMsg_FRAMEWORKS = UIKit
-
+TWEAK_NAME = HZWeChatChangeSport
+HZWeChatChangeSport_FILES = Tweak.xm
+HZWeChatChangeSport_FRAMEWORKS = UIKit
 
 include $(THEOS_MAKE_PATH)/tweak.mk
 
