--- a/hzwechatchangesport/control
+++ b/hzwechatchangesport/control
@@ -1,10 +1,9 @@
-Package: com.hongzhi.hzwechatnorevokemsg
-Name: HZWeChatNoRevokeMsg
+Package: com.hongzhi.hzwechatchangesport
+Name: HZWeChatChangeSport
 Depends: mobilesubstrate
+Version: 0.0.1
 Architecture: iphoneos-arm
 Description: An awesome MobileSubstrate tweak!
 Maintainer: 红纸
 Author: 红纸
 Section: Tweaks
-Version: 0.0.1-9
-Installed-Size: 136
